# AI-Powered-Research-Paper-Companion

./: LICENSE  README.md  pyproject.toml
output/: report.md
src/researchpapercompanion/: crew.py  main.py
src/researchpapercompanion/config/: agents.yaml  tasks.yaml
